apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'application'

group 'com.lostsys.test.javalin'
version '1.0-SNAPSHOT'

mainClassName = 'com.lostsys.test.javalin.Bench'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile 'io.javalin:javalin:2.3.0'
    compile "com.fasterxml.jackson.core:jackson-databind:2.9.6"
    compile "org.slf4j:slf4j-simple:1.7.25"
}

/* ****************** */
/*    Application     */
/* ****************** */
run {
    if(project.hasProperty('args')){
        args project.args.split(',')
    }
    jvmArgs = ['-XX:+UseParallelGC','-XX:+AggressiveOpts']//['-XX:+UseNUMA','-XX:+UseParallelGC','-XX:+AggressiveOpts']
}
applicationDistribution.from("webapp") {
    into "webapp"
}

/* ****************** */
/*    Eclipse         */
/* ****************** */
eclipse {
    classpath {
        // we need the output dir to be the same as the one gradle uses when running Jetty
        // or else the dynamic loading does not apply
        defaultOutputDir = file('build/classes/main')
    }
}